--- a/README
+++ b/README
@@ -4,15 +4,15 @@ Comprehensive Comparison of Deep Learning Models for Lung and COVID-19 Lesion Se
 
 Requirements:
 - POSIX-oriented operating system https://en.wikipedia.org/wiki/POSIX#POSIX-oriented_operating_systems
-- Git https://git-scm.com/downloads
-- GNU Make https://www.gnu.org/software/make/
-- Docker https://docs.docker.com/get-docker/
+- Git (Any version) https://git-scm.com/downloads
+- GNU Make (>= 3.79) https://www.gnu.org/software/make/
+- Docker (Any version or >= 19.03 for NVIDIA Container Toolkit) https://docs.docker.com/get-docker/
 - [Optional] NVIDIA Container Toolkit https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/install-guide.html
 
 Preparation:
-1. git clone https://github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct
-2. cd comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
-3. sudo systemctl start docker
+git clone https://github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct
+cd comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
+sudo systemctl start docker
 
 Basic usage:
 make		# Generate draft (fast) results.
