--- a/README
+++ b/README
@@ -3,11 +3,11 @@ Comprehensive Comparison of Deep Learning Models for Lung and COVID-19 Lesion Se
 - https://pbizopoulos.github.io/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
 
 Requirements:
-- POSIX-oriented operating system https://en.wikipedia.org/wiki/POSIX#POSIX-oriented_operating_systems
-- Git (Any version) https://git-scm.com/downloads
-- GNU Make (>= 3.79) https://www.gnu.org/software/make/
-- Docker (Any version or >= 19.03 for NVIDIA Container Toolkit) https://docs.docker.com/get-docker/
-- [Optional] NVIDIA Container Toolkit https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/install-guide.html
+- POSIX-oriented operating system
+- Git (Any version)
+- GNU Make (>= 3.79)
+- Docker (Any version or >= 19.03 for NVIDIA Container Toolkit)
+- [Optional] NVIDIA Container Toolkit
 
 Preparation:
 git clone https://github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct
